(lang dune 2.0)
(name brands)
(implicit_transitive_deps false)

(generate_opam_files true)
(source (github CraigFe/brands))
(maintainers "Craig Ferguson <me@craigfe.io>")
(authors "Craig Ferguson <me@craigfe.io>")

(package
 (name brands)
 (synopsis "An implementation of defunctionalised higher-kinded types in OCaml.")
 (description "\
An implementation of defunctionalised higher-kinded types in OCaml.
")
 (documentation https://CraigFe.github.io/kind/))
