(test
 (name spec)
 (deps
  (source_tree .))
 (modules spec)
 (libraries scaffold))

(rule
 (targets dune.scaffold-inc.gen)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   %{targets}
   (run %{exe:spec.exe} generate --path ''))))

(rule
 (alias runtest)
 (action
  (diff dune.scaffold-inc dune.scaffold-inc.gen)))

(include dune.scaffold-inc)
